--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,44 @@
 </head>
 <body>
 
-<div class="row">
-    <div class="span3">
-        <h2>About Us</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="#">Some Store</a>
+
+            <div class="nav-collapse">
+                <ul class="nav">
+                    <li><%= link_to "Browse Photos", photos_path %></li>
+                    <li><%= link_to "Price List" %></li>
+                    <li><%= link_to "Contact Us" %></li>
+                    <li><%= link_to "Cart" %></li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="span9">
-        <%= yield %>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="span3">
+            <h2>About Us</h2>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="span9">
+            <%= yield %>
+        </div>
     </div>
+</div>
 </div>
 
 </body>
