--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,31 +1,48 @@
-<h1>Listing photos</h1>
-
-<table>
+<%- model_class = Photo -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Photographer</th>
-      <th>Price</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%= model_class.human_attribute_name(:photographer) %></th>
+      <th><%= model_class.human_attribute_name(:price) %></th>
+      <th><%= model_class.human_attribute_name(:pic_file_name) %></th>
+      <th><%= model_class.human_attribute_name(:pic_content_type) %></th>
+      <th><%= model_class.human_attribute_name(:pic_file_size) %></th>
+      <th><%= model_class.human_attribute_name(:pic_updated_at) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @photos.each do |photo| %>
       <tr>
+        <td><%= link_to photo.id, photo_path(photo) %></td>
         <td><%= photo.title %></td>
         <td><%= photo.photographer %></td>
         <td><%= photo.price %></td>
-        <td><%= link_to 'Show', photo %></td>
-        <td><%= link_to 'Edit', edit_photo_path(photo) %></td>
-        <td><%= link_to 'Destroy', photo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= photo.pic_file_name %></td>
+        <td><%= photo.pic_content_type %></td>
+        <td><%= photo.pic_file_size %></td>
+        <td><%= photo.pic_updated_at %></td>
+        <td><%=l photo.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_photo_path(photo), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      photo_path(photo),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Photo', new_photo_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_photo_path,
+            :class => 'btn btn-primary' %>
