--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,23 +1,36 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Photo -%>
+<div class="page-header">
+    <h1><%= t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
+<dl class="dl-horizontal">
 
-<%= image_tag @photo.pic.url(:medium)%>
+    <dd><%= image_tag @photo.pic.url(:medium) %></dd>
 
+    <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+    <dd><%= @photo.title %></dd>
+    <dt><strong><%= model_class.human_attribute_name(:photographer) %>:</strong></dt>
+    <dd><%= @photo.photographer %></dd>
+    <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
+    <dd><%= @photo.price %></dd>
+    <!--  <dt><strong><%= model_class.human_attribute_name(:pic_file_name) %>:</strong></dt>
+  <dd><%= @photo.pic_file_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:pic_content_type) %>:</strong></dt>
+  <dd><%= @photo.pic_content_type %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:pic_file_size) %>:</strong></dt>
+  <dd><%= @photo.pic_file_size %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:pic_updated_at) %>:</strong></dt>
+  <dd><%= @photo.pic_updated_at %></dd>-->
+</dl>
 
-<p>
-  <strong>Title:</strong>
-  <%= @photo.title %>
-</p>
-
-<p>
-  <strong>Photographer:</strong>
-  <%= @photo.photographer %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @photo.price %>
-</p>
-
-<%= link_to 'Edit', edit_photo_path(@photo) %> |
-<%= link_to 'Back', photos_path %>
+<div class="form-actions">
+    <%= link_to t('.back', :default => t("helpers.links.back")),
+                photos_path, :class => 'btn' %>
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                edit_photo_path(@photo), :class => 'btn' %>
+    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                photo_path(@photo),
+                :method => 'delete',
+                :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
+                :class => 'btn btn-danger' %>
+</div>
