--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,6 +1,8 @@
 @import "twitter/bootstrap/bootstrap";
 
-body { padding-top: 60px; }
+body {
+  padding-top: 60px;
+}
 
 @import "twitter/bootstrap/responsive";
 
@@ -15,11 +17,17 @@ body { padding-top: 60px; }
 @fontAwesomeTtfPath: asset-url("fontawesome-webfont.ttf");
 @fontAwesomeSvgPath: asset-url("fontawesome-webfont.svg#fontawesomeregular");
 
+@navbarBackground: @black;
+@tableBackgroundAccent: @grayDarker;
+
+@bodyBackground: @black;
+@textColor: @purple;
+//@white: #000000;
 // Font Awesome
 @import "fontawesome/font-awesome";
 
 // Glyphicons
-//@import "twitter/bootstrap/sprites.less";
+//@import "twitter/bootstrap/sprites.less";                                                              less
 
 // Your custom LESS stylesheets goes here
 //
