--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
 
 <%= nav_bar :fixed => :top, :responsive => true, :brand => "Palak Shah Photography" do %>
     <%= menu_group :pull => :right do %>
+        <%= menu_item "Home" , "/static_pages/home"%>
         <%= menu_item "Browse Photos", photos_path %>
-        <%= menu_item "About Us" , "static_pages/about_us"%>
+        <%= menu_item "About Us" , "/static_pages/about_us"%>
         <%= menu_divider %>
 
         <%= render "layouts/search_form" %>
@@ -21,15 +22,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="span3">
-            <h2>About Us</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
-        </div>
         <div class="span9">
 
             <%= yield %>
