Fixed formating and carousel

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,3 +5,11 @@
  *= require_self
  *= require_tree .
 */
+
+
+
+/*.carousel {
+    width: 50%;
+    margin-left: auto ;
+    margin-right: auto ;
+}*/
