--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -1,2 +1,33 @@
-<h1>StaticPages#about_us</h1>
-<p>Find me in app/views/static_pages/about_us.html.erb</p>
+<p class="span9 offset1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque sollicitudin orci id consequat. Donec
+    eleifend ornare fringilla. Fusce vitae ante mollis, accumsan quam sit amet, rhoncus mauris. Ut neque ipsum,
+    vestibulum in eleifend eget, pulvinar vitae magna. Vestibulum purus ligula, porta et orci et, mattis scelerisque
+    ligula. Nunc in interdum dolor. Quisque ornare aliquet ullamcorper. Vivamus non porta nunc, eget ullamcorper libero.
+    Donec placerat tempor accumsan. Pellentesque dictum sem vitae leo vehicula, in convallis sapien feugiat. Vivamus vel
+    faucibus nulla. Ut malesuada, urna vel tristique rutrum, felis lectus bibendum lacus, non porta elit metus eu enim.
+    Integer in pulvinar metus. Nullam non tincidunt nisi, vel malesuada arcu. Praesent tristique at nunc non euismod.
+
+    Vestibulum sapien risus, tincidunt cursus nulla ut, sagittis vulputate dui. Phasellus auctor purus velit. Nunc
+    mattis tortor nisi, ut porttitor diam lacinia vel. In molestie nunc a neque iaculis, eget tempus nulla adipiscing.
+    Fusce sollicitudin magna enim, et adipiscing turpis vehicula eu. Fusce vulputate nibh lacinia consequat auctor.
+    Etiam nec posuere felis. Morbi fermentum euismod dolor, sed commodo ipsum tincidunt at. In at odio et leo bibendum
+    cursus et quis sem. Aenean laoreet scelerisque orci, id fringilla quam ornare et. Suspendisse vulputate, mi a
+    consectetur lobortis, metus nibh rhoncus sem, vitae mattis erat eros non dolor. Vestibulum quis arcu quis purus
+    aliquam ultricies. Nunc magna elit, facilisis id urna sit amet, pretium aliquam felis. Nunc gravida diam eget dui
+    dapibus ultrices. Vestibulum nunc odio, bibendum eu pretium sed, pellentesque eleifend elit.
+
+    Maecenas et enim tortor. Nunc odio elit, ultrices vel erat vel, elementum imperdiet ante. Aliquam auctor dictum
+    felis, vel semper sem ornare ut. Duis aliquet elementum neque, vel porta neque. In dui nulla, iaculis sed erat sit
+    amet, facilisis gravida tortor. Praesent auctor molestie risus non porta. Praesent arcu lacus, dignissim vitae
+    aliquet eget, scelerisque ut enim. Integer dapibus, nunc non tempor ullamcorper, dui orci aliquet massa, vehicula
+    aliquet nibh enim pellentesque risus. Ut mi nulla, varius ac enim non, dictum convallis justo. Nam sed lacinia leo.
+    Praesent ut blandit ante, id ullamcorper magna. Integer faucibus placerat metus, quis mattis lorem accumsan eu.
+    Proin lacinia nunc neque, id lobortis mi venenatis eget. In purus erat, molestie et dolor sed, venenatis consectetur
+    risus. In tempor placerat diam, in suscipit orci accumsan a. Nam quis metus purus.
+
+    Sed tellus leo, viverra ac tempus in, elementum eu lacus. Nam et diam eget nisl pretium semper nec eu tortor. Nullam
+    auctor laoreet elit, eu vulputate nisl placerat eu. Cras dictum, nunc nec dignissim condimentum, elit dolor
+    consectetur neque, sit amet tempor lacus leo a nisi. Suspendisse eu purus sagittis, varius justo ac, porttitor diam.
+    Mauris quis congue libero, a condimentum elit. Phasellus ac enim nec nunc hendrerit tempor. Aenean justo orci,
+    ullamcorper vitae urna eu, iaculis ornare tortor. Proin eu lacinia nisl. Nulla elementum gravida orci, ut venenatis
+    ipsum vulputate quis. Fusce mattis non purus nec feugiat. Ut aliquam tincidunt ligula, sed sodales justo scelerisque
+    ornare.</p>
