--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,36 +1,40 @@
 <%- model_class = Photo -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+    <h1><%= t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
 <table class="table table-striped">
-  <thead>
+    <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:photographer) %></th>
-      <th><%= model_class.human_attribute_name(:price) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+        <th><%= model_class.human_attribute_name(:id) %></th>
+        <th><%= model_class.human_attribute_name(:title) %></th>
+        <th><%= model_class.human_attribute_name(:photographer) %></th>
+        <th><%= model_class.human_attribute_name(:price) %></th>
+        <% if admin_signed_in? %>
+            <th><%= t '.actions', :default => t("helpers.actions") %></th>
+        <% end %>
     </tr>
-  </thead>
-  <tbody>
+    </thead>
+    <tbody>
     <% @photos.each do |photo| %>
-      <tr>
-        <td><%= link_to photo.id, photo_path(photo) %></td>
-        <td><%= photo.title %></td>
-        <td><%= photo.photographer %></td>
-        <td><%= photo.price %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_photo_path(photo), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      photo_path(photo),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
+        <tr>
+            <td><%= link_to photo.id, photo_path(photo) %></td>
+            <td><%= photo.title %></td>
+            <td><%= photo.photographer %></td>
+            <td><%= photo.price %></td>
+            <% if admin_signed_in? %>
+                <td>
+                    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                                edit_photo_path(photo), :class => 'btn btn-mini' %>
+                    <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                                photo_path(photo),
+                                :method => :delete,
+                                :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
+                                :class => 'btn btn-mini btn-danger' %>
+                </td>
+            <% end %>
+        </tr>
     <% end %>
-  </tbody>
+    </tbody>
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
