fixed css to have black bactround.  removed new utton for non admin users

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,3 +1,7 @@
+
+/*
+
+//commented out this stuff to get purple and black coloring back
 body {
   background-color: #fff;
   color: #333;
@@ -67,3 +71,4 @@ div {
     list-style: square;
   }
 }
+*/
